--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
 <p>Introduction to Data Science is a hands-on course intended for students with little to no coding experience, in which you learn how to use R to collect, manipulate, analyze, and visualize data.</p>
 <div id="schedule" class="section level2 unnumbered">
 <h2>Schedule</h2>
+<p>The class time will be divided as follows:</p>
+<ul>
+<li><p><strong>8:35 am to 9:25 am</strong>: lecture &amp; Q&amp;A in-person and on <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a> (<strong>only on teams for January</strong>).</p></li>
+<li><p><strong>9:35 am to 11:25 am</strong>: Lab time with in-person and <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a> support (<strong>only teams support for January</strong>)</p></li>
+</ul>
+<p><strong>In-person attendance will remain optional for the entire semester</strong>. When in-person teaching resumes, the lectures will be hybrid (in-person, with a recorded Teams broadcast). The labs will be in person, with virtual support available via Teams. Of course, I am always available for support outside of class hours and you can book a meeting with me <a href="https://calendly.com/pmongeon/">here</a>.</p>
 <table class=" lightable-classic" style="font-family: &quot;Arial Narrow&quot;, &quot;Source Sans Pro&quot;, sans-serif; margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
@@ -474,7 +480,7 @@ Individual project part 2
 <object data="files/syllabus/INFO6270-Syllabus.pdf" type="application/pdf" width="700px" height="500">
 <embed src="files/syllabus/INFO6270-Syllabus.pdf">
 <p>
-This browser does not support PDFs. Please download the PDF to view it: <a href="files/syllabus/INFO6270-Syllabus.pdf">Download PDF</a>.
+<p>This browser does not support PDFs. Please download the PDF to view it: <a href="files/syllabus/INFO6270-Syllabus.pdf">Download PDF</a>.</p>
 </p>
 </embed>
 </object>
