--- a/index.html
+++ b/index.html
@@ -118,7 +118,39 @@
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-2---getting-started-with-r.html"><a href="chapter-2---getting-started-with-r.html#homework-1"><i class="fa fa-check"></i>Homework</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html"><i class="fa fa-check"></i>Chapter 3 - Reading and tidying data</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html"><i class="fa fa-check"></i>Chapter 3 - Reading and tidying data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#learning-objectives-2"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#tidy-data"><i class="fa fa-check"></i>Tidy data</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#the-tidyverse"><i class="fa fa-check"></i>The tidyverse</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#importing-data"><i class="fa fa-check"></i>Importing data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#delimited-file-formats"><i class="fa fa-check"></i>Delimited file formats</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#json-files"><i class="fa fa-check"></i>JSON files</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#application-programming-interface-api"><i class="fa fa-check"></i>Application programming interface (API)</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#xml-files"><i class="fa fa-check"></i>XML files</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#connections"><i class="fa fa-check"></i>Connections</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#tidying-your-data"><i class="fa fa-check"></i>Tidying your data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#reshape-data"><i class="fa fa-check"></i>Reshape data</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#expand-tables"><i class="fa fa-check"></i>Expand tables</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#handle-missing-values"><i class="fa fa-check"></i>Handle missing values</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#split-cells"><i class="fa fa-check"></i>Split cells</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#nested-data"><i class="fa fa-check"></i>Nested data</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#combining-data-frames"><i class="fa fa-check"></i>Combining data frames</a></li>
+<li class="chapter" data-level="0.0.1" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#joins"><i class="fa fa-check"></i><b>0.0.1</b> Joins</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#renaming-variables"><i class="fa fa-check"></i>Renaming variables</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#exporting-data"><i class="fa fa-check"></i>Exporting data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#exporting-tables"><i class="fa fa-check"></i>Exporting tables</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#json"><i class="fa fa-check"></i>JSON</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#the-pipe"><i class="fa fa-check"></i>The Pipe</a></li>
+<li class="chapter" data-level="0.1" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#additional-resources"><i class="fa fa-check"></i><b>0.1</b> Additional resources</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#homework-2"><i class="fa fa-check"></i>Homework</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html"><i class="fa fa-check"></i>Chapter 4 - Working with strings</a></li>
 <li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html"><i class="fa fa-check"></i>Chapter 5 - Describing and visualizing data</a></li>
 <li class="chapter" data-level="" data-path="chapter-6---network-analysis.html"><a href="chapter-6---network-analysis.html"><i class="fa fa-check"></i>Chapter 6 - Network analysis</a></li>
@@ -311,7 +343,7 @@ Lab 1
 5%
 </td>
 <td style="text-align:left;">
-<a href="files/assignments/info6270_lab1.zip">info6270_lab1.zip</a>
+<a href="files/assignments/info6270_lab1.r">info6270_lab1.zip</a>
 </td>
 </tr>
 <tr>
