--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ Lab 1
 5%
 </td>
 <td style="text-align:left;">
-<a href="files/assignments/info6270_lab1.r">info6270_lab1.zip</a>
+<a href="files/assignments/info6270_lab1.r">info6270_lab1.r</a>
 </td>
 </tr>
 <tr>
