--- a/slides/slides_ch3.html
+++ b/slides/slides_ch3.html
@@ -530,8 +530,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h1>Plan</h1>
 <ul>
 <li><p>Review of lab 1</p></li>
-<li><p>What is the tidyverse?</p></li>
-<li><p>Why the pipe</p></li>
+<li><p>Tidy data</p></li>
+<li><p>The pipe</p></li>
 </ul>
 <style>
     .reveal section img { 
