--- a/index.html
+++ b/index.html
@@ -120,10 +120,13 @@
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html"><i class="fa fa-check"></i>Chapter 3 - Reading and tidying data</a>
 <ul>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#learning-objectives-2"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#learning-objectives-2"><i class="fa fa-check"></i>Learning objectives</a>
+<ul>
+<li><a href="chapter-3---reading-and-tidying-data.html#slides"><strong>Slides</strong></a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#tidy-data"><i class="fa fa-check"></i>Tidy data</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#the-tidyverse"><i class="fa fa-check"></i>The tidyverse</a></li>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#importing-data"><i class="fa fa-check"></i>Importing data</a>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#import-data"><i class="fa fa-check"></i>Import data</a>
 <ul>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#delimited-file-formats"><i class="fa fa-check"></i>Delimited file formats</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#json-files"><i class="fa fa-check"></i>JSON files</a></li>
@@ -131,27 +134,48 @@
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#xml-files"><i class="fa fa-check"></i>XML files</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#connections"><i class="fa fa-check"></i>Connections</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#tidying-your-data"><i class="fa fa-check"></i>Tidying your data</a>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#tidy-your-data"><i class="fa fa-check"></i>Tidy your data</a>
 <ul>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#reshape-data"><i class="fa fa-check"></i>Reshape data</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#expand-tables"><i class="fa fa-check"></i>Expand tables</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#handle-missing-values"><i class="fa fa-check"></i>Handle missing values</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#merge-and-split-cells"><i class="fa fa-check"></i>Merge and split cells</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#nested-data"><i class="fa fa-check"></i>Nested data</a></li>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#combining-data-frames"><i class="fa fa-check"></i>Combining data frames</a></li>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#joins"><i class="fa fa-check"></i>Joins</a></li>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#renaming-variables"><i class="fa fa-check"></i>Renaming variables</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#combine-dataframes"><i class="fa fa-check"></i>Combine dataframes</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#join-dataframes"><i class="fa fa-check"></i>Join dataframes</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#rename-variables"><i class="fa fa-check"></i>Rename variables</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#exporting-data"><i class="fa fa-check"></i>Exporting data</a>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#export-data"><i class="fa fa-check"></i>Export data</a>
 <ul>
-<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#exporting-tables"><i class="fa fa-check"></i>Exporting tables</a></li>
+<li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#export-dataframes"><i class="fa fa-check"></i>Export dataframes</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#json"><i class="fa fa-check"></i>JSON</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#the-pipe"><i class="fa fa-check"></i>The Pipe</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#additional-resources"><i class="fa fa-check"></i>Additional resources</a></li>
 <li class="chapter" data-level="" data-path="chapter-3---reading-and-tidying-data.html"><a href="chapter-3---reading-and-tidying-data.html#homework-2"><i class="fa fa-check"></i>Homework</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html"><i class="fa fa-check"></i>Chapter 4 - Working with strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html"><i class="fa fa-check"></i>Chapter 4 - Working with strings</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#learning-objectives-3"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#dealing-with-messy-or-unstructured-data"><i class="fa fa-check"></i>Dealing with messy or unstructured data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#cleaning-messy-data"><i class="fa fa-check"></i>Cleaning messy data</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#filtering-rows-based-on-string-matches"><i class="fa fa-check"></i>Filtering rows based on string matches</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#extracting-data-from-text"><i class="fa fa-check"></i>Extracting data from text</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#the-stringr-package"><i class="fa fa-check"></i>The stringr package</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#transforming-strings"><i class="fa fa-check"></i>Transforming strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#clean-up-a-string"><i class="fa fa-check"></i>Clean up a string</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#combine-strings"><i class="fa fa-check"></i>Combine strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#splitting-strings"><i class="fa fa-check"></i>Splitting strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#subsetting-strings"><i class="fa fa-check"></i>Subsetting strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#testing-strings"><i class="fa fa-check"></i>Testing strings</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#regular-expressions-regex"><i class="fa fa-check"></i>Regular expressions (regex)</a></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#dealing-with-special-characters"><i class="fa fa-check"></i>Dealing with special characters</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-4---working-with-strings.html"><a href="chapter-4---working-with-strings.html#homework-3"><i class="fa fa-check"></i>Homework</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="chapter-5---describing-and-visualizing-data.html"><a href="chapter-5---describing-and-visualizing-data.html"><i class="fa fa-check"></i>Chapter 5 - Describing and visualizing data</a></li>
 <li class="chapter" data-level="" data-path="chapter-6---network-analysis.html"><a href="chapter-6---network-analysis.html"><i class="fa fa-check"></i>Chapter 6 - Network analysis</a></li>
 <li class="chapter" data-level="" data-path="chapter-7---topic-modelling.html"><a href="chapter-7---topic-modelling.html"><i class="fa fa-check"></i>Chapter 7 - Topic modelling</a></li>
@@ -371,7 +395,7 @@ Lab 3
 5%
 </td>
 <td style="text-align:left;">
-coming soon
+<a href="files/assignments/info6270_lab3.r">info6270_lab3.r</a>
 </td>
 </tr>
 <tr>
