--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 <h2>Schedule</h2>
 <p>The class time will be divided as follows:</p>
 <ul>
-<li><p><strong>8:35 am to 9:25 am</strong>: lecture &amp; Q&amp;A in-person and on <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a>.</p></li>
-<li><p><strong>9:35 am to 11:25 am</strong>: Lab time with in-person and <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a> support.</p></li>
+<li><p><strong>8:35 am to 9:25 am</strong>: lecture &amp; Q&amp;A in-person (McCain 1170) and on <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a>.</p></li>
+<li><p><strong>9:35 am to 11:25 am</strong>: Lab time with in-person (Rowe 3080) with <a href="https://teams.microsoft.com/l/channel/19%3aLQYSn5Osl9AOZ8Jkdo87TJtoRR1eTZPfsnwuHhHvd1g1%40thread.tacv2/General?groupId=4f33405b-a8d6-47e4-b4a6-7669dbfab4df&amp;tenantId=60b81999-0b7f-412d-92a3-e17d8ae9e3e0">Teams</a> support.</p></li>
 </ul>
 <p><strong>In-person attendance will remain optional for the entire semester</strong>. When in-person teaching resumes, the lectures will be hybrid (in-person, with a recorded Teams broadcast). The labs will be in person, with virtual support available via Teams. Of course, I am always available for support outside of class hours and you can book a meeting with me <a href="https://calendly.com/pmongeon/">here</a>.</p>
 <table class=" lightable-classic" style="font-family: &quot;Arial Narrow&quot;, &quot;Source Sans Pro&quot;, sans-serif; margin-left: auto; margin-right: auto;">
@@ -429,7 +429,7 @@ Lab 4
 5%
 </td>
 <td style="text-align:left;">
-coming soon
+<a href="files/assignments/info6270_lab4.Rmd">info6270_lab4.Rmd</a>
 </td>
 </tr>
 <tr>
