--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ Lab 4
 5%
 </td>
 <td style="text-align:left;">
-<a href="files/assignments/info6270_lab4.Rmd">info6270_lab4.Rmd</a>, <a href="files/assignments/info6270_lab4.htmls">info6270_lab4.html</a>
+<a href="files/assignments/info6270_lab4.Rmd">info6270_lab4.Rmd</a>, <a href="files/assignments/info6270_lab4.html">info6270_lab4.html</a>
 </td>
 </tr>
 <tr>
