--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Files
 Lab 1
 </td>
 <td style="text-align:left;">
-2022-01-19 23:59:00
+2022-01-19 23:59
 </td>
 <td style="text-align:left;">
 5%
@@ -395,7 +395,7 @@ Lab 1
 Lab 2
 </td>
 <td style="text-align:left;">
-2022-01-26 23:59:00
+2022-01-26 23:59
 </td>
 <td style="text-align:left;">
 5%
@@ -409,7 +409,7 @@ Lab 2
 Lab 3
 </td>
 <td style="text-align:left;">
-2022-02-02 23:59:00
+2022-02-02 23:59
 </td>
 <td style="text-align:left;">
 5%
@@ -423,7 +423,7 @@ Lab 3
 Lab 4
 </td>
 <td style="text-align:left;">
-2022-02-09 23:59:00
+2022-02-16 23:59
 </td>
 <td style="text-align:left;">
 5%
@@ -434,10 +434,24 @@ Lab 4
 </tr>
 <tr>
 <td style="text-align:left;">
+Lab 5
+</td>
+<td style="text-align:left;">
+2022-02-16 23:59
+</td>
+<td style="text-align:left;">
+5%
+</td>
+<td style="text-align:left;">
+coming soon
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
 Individual project part 1
 </td>
 <td style="text-align:left;">
-2022-02-11 23:59:00
+2022-02-25 23:59
 </td>
 <td style="text-align:left;">
 10%
@@ -448,30 +462,16 @@ Individual project part 1
 </tr>
 <tr>
 <td style="text-align:left;">
-Lab 5
-</td>
-<td style="text-align:left;">
-2022-02-16 23:59:00
-</td>
-<td style="text-align:left;">
-5%
-</td>
-<td style="text-align:left;">
-coming soon
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
 Lab 6
 </td>
 <td style="text-align:left;">
-2022-03-02 23:59:00
+Cancelled
 </td>
 <td style="text-align:left;">
 5%
 </td>
 <td style="text-align:left;">
-coming soon
+Cancelled
 </td>
 </tr>
 <tr>
@@ -479,7 +479,7 @@ coming soon
 Lab 7
 </td>
 <td style="text-align:left;">
-2022-03-09 23:59:00
+2022-03-09 23:59
 </td>
 <td style="text-align:left;">
 5%
@@ -493,7 +493,7 @@ coming soon
 Lab 8
 </td>
 <td style="text-align:left;">
-2022-03-16 23:59:00
+2022-03-16 23:59
 </td>
 <td style="text-align:left;">
 5%
@@ -507,7 +507,7 @@ coming soon
 Lab 9
 </td>
 <td style="text-align:left;">
-2022-03-23 23:59:00
+2022-03-23 23:59
 </td>
 <td style="text-align:left;">
 5%
@@ -521,7 +521,7 @@ coming soon
 Lab 10
 </td>
 <td style="text-align:left;">
-2022-03-30 23:59:00
+2022-03-30 23:59
 </td>
 <td style="text-align:left;">
 5%
@@ -535,7 +535,7 @@ coming soon
 Individual project part 2
 </td>
 <td style="text-align:left;">
-2022-04-15 23:59:00
+2022-04-15 23:59
 </td>
 <td style="text-align:left;">
 40%
