--- a/files/assignments/info6270_lab4.html
+++ b/files/assignments/info6270_lab4.html
@@ -512,9 +512,7 @@ compact
 <div id="variables" class="section level2">
 <h2>Variables <!--# 2 pts --></h2>
 <!--#  INSTRUCTIONS:1. Create a table that contains the following three columns:   a. Variable (The name of the variable)   b. Type (Continuous or Discrete)   c. Description (a VERY SHORT desription of the variable)2. Use tha same formatting as you did for the previous table.3.Introduce your table with a short text. You can use my example below as you wishNote: The following codes contains an example. The first one creates the tibble, the second code displays it. Replace my code with your own. Do not display the code in the HTML output.-->
-<p><br />
-<br />
-Table 2 provides a list of the variables included in the dataset, along with the data types and descriptions.</p>
+<p>Table 2 provides a list of the variables included in the dataset, along with the data types and descriptions.</p>
 <!--# This is the same code but without the comments -->
 <!--# And now I display my table -->
 <table class=" lightable-classic" style="font-family: &quot;Arial Narrow&quot;, &quot;Source Sans Pro&quot;, sans-serif; margin-left: auto; margin-right: auto;">
