--- a/404.html
+++ b/404.html
@@ -223,13 +223,31 @@
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html"><i class="fa fa-check"></i>Chapter 7 - Visualizing data</a>
 <ul>
-<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#introduction-2"><i class="fa fa-check"></i>Introduction</a>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#introduction-2"><i class="fa fa-check"></i>Introduction</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#the-ggplot-syntax"><i class="fa fa-check"></i>The ggplot syntax</a>
 <ul>
-<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#the-ggplot-syntax"><i class="fa fa-check"></i>the ggplot syntax</a></li>
-<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#choosing-the-right-visualization-for-your-data"><i class="fa fa-check"></i>Choosing the right visualization for your data</a></li>
-<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#facets"><i class="fa fa-check"></i>Facets</a></li>
-<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#making-pretty-figures"><i class="fa fa-check"></i>Making pretty figures</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#the-data"><i class="fa fa-check"></i>The data</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#aesthetic-mappings"><i class="fa fa-check"></i>Aesthetic mappings</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#geoms"><i class="fa fa-check"></i>Geoms</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#adding-a-second-geom"><i class="fa fa-check"></i>Adding a second geom</a></li>
 </ul></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#making-pretty-figures"><i class="fa fa-check"></i>Making pretty figures</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#modifying-labels"><i class="fa fa-check"></i>Modifying labels</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#themes"><i class="fa fa-check"></i>Themes</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#colours"><i class="fa fa-check"></i>Colours</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#adjusting-axes-scales"><i class="fa fa-check"></i>Adjusting axes scales</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#choosing-the-right-visualization-for-your-data"><i class="fa fa-check"></i>Choosing the right visualization for your data</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#single-discretecategorical-variable"><i class="fa fa-check"></i>Single discrete/categorical variable</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#single-continuous-variable"><i class="fa fa-check"></i>Single continuous variable</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#two-continuous-variable"><i class="fa fa-check"></i>Two continuous variable</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#two-categorical-or-discrete-variables"><i class="fa fa-check"></i>Two categorical or discrete variables</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#one-categorical-and-one-continuous-variable"><i class="fa fa-check"></i>One categorical and one continuous variable</a></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#facets"><i class="fa fa-check"></i>Facets</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-7---visualizing-data.html"><a href="chapter-7---visualizing-data.html#homework-5"><i class="fa fa-check"></i>Homework</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html"><i class="fa fa-check"></i>Chapter 8 - Topic modelling</a></li>
 <li class="chapter" data-level="" data-path="chapter-9---k-nearest-neighbors.html"><a href="chapter-9---k-nearest-neighbors.html"><i class="fa fa-check"></i>Chapter 9 - K nearest neighbors</a></li>
