--- a/index.html
+++ b/index.html
@@ -573,13 +573,13 @@ Lab 7
 Lab 8
 </td>
 <td style="text-align:left;">
-2022-03-16 23:59
+Cancelled
 </td>
 <td style="text-align:left;">
 5%
 </td>
 <td style="text-align:left;">
-coming soon
+Cancelled
 </td>
 </tr>
 <tr>
