--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ Reading week (Feb 24)
 Week 8 (Mar 3)
 </td>
 <td style="text-align:left;">
-K-nearest neighbors
+Free lab time
 </td>
 </tr>
 <tr>
@@ -421,15 +421,14 @@ Linear regression
 Week 11 (Mar 24)
 </td>
 <td style="text-align:left;">
-Principal component analysis
-</td>
+Free lab time</td>
 </tr>
 <tr>
 <td style="text-align:left;">
 Week 12 (Mar 31)
 </td>
 <td style="text-align:left;">
-Conclusion
+Free lab time
 </td>
 </tr>
 </tbody>
