--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ Reading week (Feb 24)
 Week 8 (Mar 3)
 </td>
 <td style="text-align:left;">
-Free lab time
+K-nearest neighbors
 </td>
 </tr>
 <tr>
@@ -421,14 +421,15 @@ Linear regression
 Week 11 (Mar 24)
 </td>
 <td style="text-align:left;">
-Free lab time</td>
+Principal component analysis
+</td>
 </tr>
 <tr>
 <td style="text-align:left;">
 Week 12 (Mar 31)
 </td>
 <td style="text-align:left;">
-Free lab time
+Conclusion
 </td>
 </tr>
 </tbody>
@@ -572,13 +573,13 @@ Lab 7
 Lab 8
 </td>
 <td style="text-align:left;">
-Cancelled
+2022-03-16 23:59
 </td>
 <td style="text-align:left;">
 5%
 </td>
 <td style="text-align:left;">
-Cancelled
+coming soon
 </td>
 </tr>
 <tr>
