--- a/index.html
+++ b/index.html
@@ -280,7 +280,24 @@
 <li class="chapter" data-level="" data-path="chapter-8---topic-modelling.html"><a href="chapter-8---topic-modelling.html#other-resources"><i class="fa fa-check"></i>Other resources</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-9---k-nearest-neighbors.html"><a href="chapter-9---k-nearest-neighbors.html"><i class="fa fa-check"></i>Chapter 9 - K nearest neighbors</a></li>
-<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html"><i class="fa fa-check"></i>Chapter 10 - Logistic regression</a></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html"><i class="fa fa-check"></i>Chapter 10 - Logistic regression</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#learning-objectives-7"><i class="fa fa-check"></i>Learning objectives</a></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#introduction-4"><i class="fa fa-check"></i>Introduction</a></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#logistic-regression"><i class="fa fa-check"></i>Logistic regression</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#logisitic-function"><i class="fa fa-check"></i>Logisitic function</a></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#odds"><i class="fa fa-check"></i>Odds</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#logistic-regression-example"><i class="fa fa-check"></i>Logistic regression example</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#loading-and-preparing-data"><i class="fa fa-check"></i>Loading and preparing data</a></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#visualizing-the-relationships"><i class="fa fa-check"></i>Visualizing the relationships</a></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#creating-the-model"><i class="fa fa-check"></i>Creating the model</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#summary-2"><i class="fa fa-check"></i>Summary</a></li>
+<li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#lab"><i class="fa fa-check"></i>Lab</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html"><i class="fa fa-check"></i>Chapter 11 - Linear regression</a></li>
 <li class="chapter" data-level="" data-path="chapter-12---principal-component-analysis.html"><a href="chapter-12---principal-component-analysis.html"><i class="fa fa-check"></i>Chapter 12 - Principal component analysis</a></li>
 <li class="chapter" data-level="" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i>Conclusion</a></li>
@@ -579,7 +596,7 @@ Lab 8
 5%
 </td>
 <td style="text-align:left;">
-coming soon
+Cancelled
 </td>
 </tr>
 <tr>
@@ -593,7 +610,7 @@ Lab 9
 5%
 </td>
 <td style="text-align:left;">
-coming soon
+<a href="files/assignments/info6270_lab9.Rmd">info6270_lab9.Rmd</a>
 </td>
 </tr>
 <tr>
