--- a/index.html
+++ b/index.html
@@ -298,7 +298,19 @@
 <li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#summary-2"><i class="fa fa-check"></i>Summary</a></li>
 <li class="chapter" data-level="" data-path="chapter-10---logistic-regression.html"><a href="chapter-10---logistic-regression.html#lab"><i class="fa fa-check"></i>Lab</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html"><i class="fa fa-check"></i>Chapter 11 - Linear regression</a></li>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html"><i class="fa fa-check"></i>Chapter 11 - Linear regression</a>
+<ul>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#introduction-5"><i class="fa fa-check"></i>Introduction</a></li>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#linear-regression"><i class="fa fa-check"></i>Linear regression</a>
+<ul>
+<li class="chapter" data-level="0.0.1" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#example-predicting-flight-delays"><i class="fa fa-check"></i><b>0.0.1</b> Example: predicting flight delays</a></li>
+</ul></li>
+<li class="chapter" data-level="0.1" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#fitting-the-regression-line-on-data"><i class="fa fa-check"></i><b>0.1</b> Fitting the regression line on data</a>
+<ul>
+<li class="chapter" data-level="0.1.1" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#continuous-dependent-variables"><i class="fa fa-check"></i><b>0.1.1</b> continuous dependent variables</a></li>
+<li class="chapter" data-level="0.1.2" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#categorical-dependent-variables"><i class="fa fa-check"></i><b>0.1.2</b> categorical dependent variables</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="chapter-12---principal-component-analysis.html"><a href="chapter-12---principal-component-analysis.html"><i class="fa fa-check"></i>Chapter 12 - Principal component analysis</a></li>
 <li class="chapter" data-level="" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i>Conclusion</a></li>
 </ul>
@@ -414,7 +426,7 @@ Reading week (Feb 24)
 Week 8 (Mar 3)
 </td>
 <td style="text-align:left;">
-K-nearest neighbors
+Lab time
 </td>
 </tr>
 <tr>
@@ -430,7 +442,7 @@ Logistic regression
 Week 10 (Mar 17)
 </td>
 <td style="text-align:left;">
-Linear regression
+Lab time
 </td>
 </tr>
 <tr>
@@ -438,7 +450,7 @@ Linear regression
 Week 11 (Mar 24)
 </td>
 <td style="text-align:left;">
-Principal component analysis
+Linear regression
 </td>
 </tr>
 <tr>
@@ -618,7 +630,7 @@ Lab 9
 Lab 10
 </td>
 <td style="text-align:left;">
-2022-03-30 23:59
+2022-04-06 23:59
 </td>
 <td style="text-align:left;">
 5%
