--- a/index.html
+++ b/index.html
@@ -303,13 +303,15 @@
 <li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#introduction-5"><i class="fa fa-check"></i>Introduction</a></li>
 <li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#linear-regression"><i class="fa fa-check"></i>Linear regression</a>
 <ul>
-<li class="chapter" data-level="0.0.1" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#example-predicting-flight-delays"><i class="fa fa-check"></i><b>0.0.1</b> Example: predicting flight delays</a></li>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#example-predicting-flight-delays"><i class="fa fa-check"></i>Example: predicting flight delays</a></li>
 </ul></li>
-<li class="chapter" data-level="0.1" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#fitting-the-regression-line-on-data"><i class="fa fa-check"></i><b>0.1</b> Fitting the regression line on data</a>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#fitting-the-regression-line-on-data"><i class="fa fa-check"></i>Fitting the regression line on data</a>
 <ul>
-<li class="chapter" data-level="0.1.1" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#continuous-dependent-variables"><i class="fa fa-check"></i><b>0.1.1</b> continuous dependent variables</a></li>
-<li class="chapter" data-level="0.1.2" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#categorical-dependent-variables"><i class="fa fa-check"></i><b>0.1.2</b> categorical dependent variables</a></li>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#continuous-dependent-variables"><i class="fa fa-check"></i>Continuous dependent variables</a></li>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#categorical-dependent-variables"><i class="fa fa-check"></i>Categorical dependent variables</a></li>
 </ul></li>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#building-the-regression-model"><i class="fa fa-check"></i>Building the regression model</a></li>
+<li class="chapter" data-level="" data-path="chapter-11---linear-regression.html"><a href="chapter-11---linear-regression.html#homework-6"><i class="fa fa-check"></i>Homework</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="chapter-12---principal-component-analysis.html"><a href="chapter-12---principal-component-analysis.html"><i class="fa fa-check"></i>Chapter 12 - Principal component analysis</a></li>
 <li class="chapter" data-level="" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i>Conclusion</a></li>
@@ -633,10 +635,9 @@ Lab 10
 2022-04-06 23:59
 </td>
 <td style="text-align:left;">
-5%
+<a href="files/assignments/info6270_lab10.Rmd">info6270_lab9.Rmd</a>
 </td>
 <td style="text-align:left;">
-coming soon
 </td>
 </tr>
 <tr>
