--- a/summarizing_data.html
+++ b/summarizing_data.html
@@ -239,6 +239,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <li><a href="#measures-of-symmetry" id="toc-measures-of-symmetry" class="nav-link" data-scroll-target="#measures-of-symmetry"><span class="toc-section-number">6.5.3</span>  Measures of symmetry</a></li>
   </ul></li>
   <li><a href="#creating-a-descriptive-statistics-summary" id="toc-creating-a-descriptive-statistics-summary" class="nav-link" data-scroll-target="#creating-a-descriptive-statistics-summary"><span class="toc-section-number">6.6</span>  Creating a descriptive statistics summary</a></li>
+  <li><a href="#summary" id="toc-summary" class="nav-link" data-scroll-target="#summary"><span class="toc-section-number">6.7</span>  Summary</a></li>
+  <li><a href="#homework" id="toc-homework" class="nav-link" data-scroll-target="#homework"><span class="toc-section-number">6.8</span>  Homework</a></li>
   </ul>
 </nav>
     </div>
@@ -1364,6 +1366,14 @@ SD = \sqrt{\frac{\sum{(x_i-\overline{x})^2}}{N}}
 
 </div>
 </div>
+</section>
+<section id="summary" class="level2" data-number="6.7">
+<h2 data-number="6.7" class="anchored" data-anchor-id="summary"><span class="header-section-number">6.7</span> Summary</h2>
+<p>In this chapter, we learned how to produce clear and well presented tables to summarize data and help us and our readers understand the data and ensure that it is adequate for the analyses.</p>
+</section>
+<section id="homework" class="level2" data-number="6.8">
+<h2 data-number="6.8" class="anchored" data-anchor-id="homework"><span class="header-section-number">6.8</span> Homework</h2>
+<p>The homework for this week is lab 4, in which you will summarize a dataset of your choice.</p>
 
 
 </section>
